# konfig

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  clippy.toml
.github/workflows/: ci.yml  coverage.yml  konfig-cli-release.yml  konfig-k8s-integration.yml  loadtest-integration.yml  publish-images.yml
bazel/oci/: defs.bzl  transitions.bzl
chart/: Chart.yaml  values.yaml
chart/crds/: configs.konfig.io.yaml
chart/templates/: _helpers.tpl  argocd-application.yaml  configmap.yaml  deployment.yaml  pdb.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
docker/konfig/: BUILD  BUILD.bazel  Dockerfile  docker-compose.yml  init.sh  mongodb.yml  start.sh  stop.sh
docker/konfig-cli/: BUILD.bazel
docker/konfig-debug/: BUILD.bazel  README.md
docker/konfig-profiling/: BUILD.bazel
docs/: architecture.md  cli.md  configmaps-secrets.md  configuration.md  consumer-integration.md  runbook.md
docs/adr/: 0001-deployment-raw-yaml.md
infra/konfig/: certificate.yaml  configmap.yaml  deployment.yaml  issuer.yaml  kustomization.yaml  networkpolicy.yaml  role-secret.yaml
infra/konfig-loadtest/: README.md  job-backpressure.yaml  job-saturate.yaml  job-stress.yaml
infra/profiling/: BUILD.bazel  README.md  alloy-config.yaml  alloy-daemonset.yaml  alloy-rbac.yaml  namespace.yaml  pyroscope-configmap.yaml  pyroscope-deployment.yaml  pyroscope-service.yaml
proto/konfig/: BUILD.bazel
proto/konfig/v0/common/: BUILD
proto/konfig/v0/model/: BUILD
proto/konfig/v0/service/: BUILD
proto/konfig/v1/: BUILD.bazel  konfig_service.proto
rust/konfig/: BUILD.bazel  Cargo.toml  build.rs  cache.rs  cache_key.rs  codec.rs  configmap_watcher.rs  import.rs  lib.rs  main.rs  metrics.rs  secret_cache.rs  secret_watcher.rs  sync_util.rs  types.rs  value_parse.rs  watcher.rs
rust/konfig-consumer/: BUILD.bazel  Cargo.toml
rust/konfig-consumer/src/: lib.rs  metrics.rs  snapshot.rs  watcher.rs
rust/konfig/grpc/: apply.rs  get.rs  mod.rs  revert.rs  secret_apply.rs  secret_get.rs  subscribe.rs  subscribe_secrets.rs  tls.rs
rust/konfig/tests/: cp_integration.rs  integration_grpc.rs  integration_watch_timing.rs  integration_watcher.rs
rust/konfig/tests/common/: mod.rs
tools/: bazel_lcov_to_lcov.py  coverage.sh  coverage_pr_comment.py  pin-image-tags.sh  workspace_status.sh
tools/konfig-cli/: BUILD.bazel  Cargo.toml
tools/konfig-cli/src/: main.rs
tools/konfig-loadtest/: BUILD.bazel  Cargo.toml
tools/konfig-loadtest/src/: main.rs
tools/profiling/: BUILD.bazel  README.md  teardown.sh
tools/sysroot/: BUILD.bazel  extensions.bzl  sysroot.bzl
