[workspace]
resolver = "2"
members = [
    "rust/konfig",
    "tools/konfig-cli",
    "tools/konfig-loadtest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/jayakasadev/konfig"
repository = "https://github.com/jayakasadev/konfig"

[workspace.dependencies]
arc-swap = {version = "1.9.1", default-features = false}
async-trait = "0.1.89"
base64 = {version = "0.22.1", default-features = false}
bytes = "1"
dashmap = {version = "6.2.1", default-features = false}
prost = "0.14.3"
prost-types = "0.14.3"
serde = {version = "1.0.228", default-features = false, features = ["derive"]}
serde_json = {version = "1.0.149", default-features = false, features = ["alloc"]}
thiserror = {version = "2.0.18", default-features = false}
tokio = {version = "1.52.3", features = ["full"], default-features = false}
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
console-subscriber = "0.4"
dial9-tokio-telemetry = {version = "0.3", features = ["tracing-layer"]}
tracing = {version = "0.1.44", features = ["attributes", "log", "async-await"]}
