load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel/oci:defs.bzl", "konfig_oci_image")

# Symlink layer: surfaces busybox applets at the standard /bin paths so
# `kubectl exec -- /bin/sh` (and `cat`, `ls`, `ps`, ...) Just Work without
# the operator having to remember the /busybox/ prefix. The distroless cc
# debug base ships busybox at /busybox/ and `/bin -> /usr/bin` (empty),
# so we add the symlinks under /usr/bin/ which is where /bin/ resolves.
pkg_tar(
    name = "_busybox_symlinks_layer",
    symlinks = {
        "/usr/bin/sh": "/busybox/sh",
        "/usr/bin/cat": "/busybox/cat",
        "/usr/bin/ls": "/busybox/ls",
        "/usr/bin/ps": "/busybox/ps",
        "/usr/bin/wget": "/busybox/wget",
        "/usr/bin/nslookup": "/busybox/nslookup",
        "/usr/bin/netstat": "/busybox/netstat",
    },
)

# `konfig-debug` — image variant for in-cluster triage. Layers the same
# konfig binary onto `gcr.io/distroless/cc-debian13:debug-nonroot`, which
# adds busybox under /busybox/ (sh, ps, wget, nslookup, netstat, ...) on
# top of the same glibc + libgcc_s + libstdc++ runtime used by the
# production `konfig` image. A symlink layer surfaces sh/cat/ls/ps/wget
# at the standard /bin paths so `kubectl exec -- /bin/sh` works without
# the operator having to remember the /busybox/ prefix.
#
# `kubectl exec -it pod -- /bin/sh` to get an interactive shell.
# Override the entrypoint via `command: [/bin/sh]` in the PodSpec when
# running ad-hoc debugging Pods that should not start konfig itself.
konfig_oci_image(
    name = "konfig_debug",
    base = "distroless_cc_debug",
    binary = "//rust/konfig:konfig_bin",
    binary_name = "konfig",
    exposed_ports = [
        "50051/tcp",
        "9090/tcp",
    ],
    extra_tars = [":_busybox_symlinks_layer"],
    repository = "kasa288/konfig-debug",
)
