load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rustfmt_test")
load("//bazel/rust:defs.bzl", "rust_binary", "rust_test")

# Run build.rs to generate protobuf/tonic bindings into OUT_DIR.
# The proto file is available in the sandbox at
#   proto/konfig/v1/konfig_service.proto
# which matches the relative path "../../proto/konfig/v1/..." used in build.rs
# when CARGO_MANIFEST_DIR = <execroot>/rust/konfig.
cargo_build_script(
    name = "konfig_bs",
    srcs = ["build.rs"],
    build_script_env = {
        "PROTOC": "$(execpath @protobuf//:protoc)",
    },
    data = ["//proto/konfig/v1:konfig_service.proto"],
    tools = ["@protobuf//:protoc"],
    deps = ["@konfig_crates//:tonic-prost-build"],
)

# Library — all sources except main.rs (binary entry point).
rust_library(
    name = "konfig",
    srcs = glob(
        ["**/*.rs"],
        exclude = [
            "main.rs",
            "build.rs",
            "tests/**",
        ],
    ),
    tags = ["konfig", "rust"],
    visibility = [
        "//rust/coinbase:__subpackages__",
        "//rust/kraken:__subpackages__",
        "//tools:__subpackages__",
    ],
    deps = [
        ":konfig_bs",
        "@konfig_crates//:arc-swap",
        "@konfig_crates//:axum",
        "@konfig_crates//:base64",
        "@konfig_crates//:bytes",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:futures-util",
        "@konfig_crates//:k8s-openapi",
        "@konfig_crates//:kube",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:prost",
        "@konfig_crates//:serde",
        "@konfig_crates//:serde_json",
        "@konfig_crates//:serde_yaml",
        "@konfig_crates//:thiserror",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tokio-stream",
        "@konfig_crates//:tonic",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tonic-prost",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
    proc_macro_deps = ["@konfig_crates//:async-trait"],
)

# Server binary — built by docker/konfig:image via //rust/konfig:konfig_bin.
rust_binary(
    name = "konfig_bin",
    srcs = ["main.rs"],
    tags = ["konfig", "rust"],
    visibility = ["//docker/konfig:__pkg__"],
    deps = [":konfig"],
)

rust_test(
    name = "test",
    size = "small",
    crate = ":konfig",
    tags = ["konfig", "rust", "unit"],
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    tags = ["konfig", "rust", "unit"],
    targets = [":konfig"],
)

rust_clippy(
    name = "clippy_test",
    testonly = True,
    tags = ["konfig", "rust", "unit"],
    deps = [":konfig"],
)
