load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy", "rust_library", "rust_test", "rustfmt_test")

# Run build.rs to generate protobuf/tonic bindings into OUT_DIR.
# The proto file is available in the sandbox at
#   proto/konfig/v1/konfig_service.proto
# which matches the relative path "../../proto/konfig/v1/..." used in build.rs
# when CARGO_MANIFEST_DIR = <execroot>/rust/konfig.
cargo_build_script(
    name = "konfig_bs",
    srcs = ["build.rs"],
    build_script_env = {
        "PROTOC": "$(execpath @protobuf//:protoc)",
    },
    data = ["//proto/konfig/v1:konfig_service.proto"],
    tools = ["@protobuf//:protoc"],
    deps = ["@konfig_crates//:tonic-prost-build"],
)

# Library — all sources except main.rs (binary entry point).
rust_library(
    name = "konfig",
    srcs = glob(
        ["**/*.rs"],
        exclude = [
            "main.rs",
            "build.rs",
            "tests/**",
        ],
    ),
    tags = ["konfig", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig_bs",
        "@konfig_crates//:arc-swap",
        "@konfig_crates//:axum",
        "@konfig_crates//:base64",
        "@konfig_crates//:bytes",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:futures-util",
        "@konfig_crates//:k8s-openapi",
        "@konfig_crates//:kube",
        "@konfig_crates//:lazy_static",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:prost",
        "@konfig_crates//:serde",
        "@konfig_crates//:serde_json",
        "@konfig_crates//:serde_yaml",
        "@konfig_crates//:thiserror",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tokio-stream",
        "@konfig_crates//:tonic",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tonic-prost",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
    proc_macro_deps = ["@konfig_crates//:async-trait"],
)

# Server binary — standalone konfig server entry point.
# Direct crate deps required: standard rust_binary does not inherit library deps.
rust_binary(
    name = "konfig_bin",
    srcs = ["main.rs"],
    tags = ["konfig", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig",
        "@konfig_crates//:axum",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:kube",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
)

rust_test(
    name = "test",
    size = "small",
    crate = ":konfig",
    tags = ["konfig", "rust", "unit"],
)

# Integration tests — each requires K3s via Testcontainers (needs Docker daemon).
# Run with: bazel test //rust/konfig:integration_watcher_test --test_output=streamed
# Or all at once: bazel test //rust/konfig:all --test_tag_filters=integration
[rust_test(
    name = "%s_test" % name,
    size = "large",
    srcs = [
        "tests/%s.rs" % name,
        "tests/common/mod.rs",
    ],
    crate_features = ["integration"],
    env = {
        "RUST_LOG": "konfig=debug,kube=info",
        "TESTCONTAINERS_RYUK_DISABLED": "false",
    },
    tags = [
        "integration",
        "konfig",
        "local",
        "rust",
    ],
    deps = [
        ":konfig",
        "@konfig_crates//:k8s-openapi",
        "@konfig_crates//:kube",
        "@konfig_crates//:rustls",
        "@konfig_crates//:serde_json",
        "@konfig_crates//:testcontainers",
        "@konfig_crates//:testcontainers-modules",
        "@konfig_crates//:tokio",
    ],
) for name in [
    "integration_watcher",
    "integration_watch_timing",
    "integration_grpc",
    "cp_integration",
]]

rustfmt_test(
    name = "fmt_test",
    size = "small",
    tags = ["konfig", "rust", "unit"],
    targets = [":konfig"],
)

rust_clippy(
    name = "clippy_test",
    testonly = True,
    tags = ["konfig", "rust", "unit"],
    deps = [":konfig"],
)
