load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy", "rust_doc", "rust_doc_test", "rust_library", "rust_test", "rustfmt_test")

# Run build.rs to generate protobuf/tonic bindings into OUT_DIR.
# The proto file is available in the sandbox at
#   proto/konfig/v1/konfig_service.proto
# which matches the relative path "../../proto/konfig/v1/..." used in build.rs
# when CARGO_MANIFEST_DIR = <execroot>/rust/konfig.
cargo_build_script(
    name = "konfig_bs",
    srcs = ["build.rs"],
    build_script_env = {
        "PROTOC": "$(execpath @protobuf//:protoc)",
    },
    data = ["//proto/konfig/v1:konfig_service.proto"],
    tools = ["@protobuf//:protoc"],
    deps = ["@konfig_crates//:tonic-prost-build"],
)

# Library — all sources except main.rs (binary entry point).
rust_library(
    name = "konfig",
    srcs = glob(
        ["**/*.rs"],
        exclude = [
            "main.rs",
            "build.rs",
            "tests/**",
        ],
    ),
    tags = ["konfig", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig_bs",
        "@konfig_crates//:arc-swap",
        "@konfig_crates//:axum",
        "@konfig_crates//:base64",
        "@konfig_crates//:bytes",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:futures-util",
        "@konfig_crates//:k8s-openapi",
        "@konfig_crates//:kube",
        "@konfig_crates//:lazy_static",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:prost",
        "@konfig_crates//:serde",
        "@konfig_crates//:serde_json",
        "@konfig_crates//:serde_yaml",
        "@konfig_crates//:thiserror",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tokio-metrics",
        "@konfig_crates//:tokio-stream",
        "@konfig_crates//:tonic",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tonic-prost",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
    proc_macro_deps = ["@konfig_crates//:async-trait"],
)

# Server binary — standalone konfig server entry point.
# Direct crate deps required: standard rust_binary does not inherit library deps.
#
# stamp = 1: link workspace_status_command (tools/workspace_status.sh) output
# into the build. STABLE_GIT_SHA / STABLE_BUILD_TIMESTAMP / STABLE_VERSION are
# emitted into stable-status.txt; rustc_env_files wiring is a TODO for a
# follow-up PR to expose them as compile-time env vars to the binary.
rust_binary(
    name = "konfig_bin",
    srcs = ["main.rs"],
    stamp = 1,
    tags = ["konfig", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig",
        "@konfig_crates//:axum",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:kube",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
)

# Opt-in profiling binary — same sources as `:konfig_bin` but built with
# `--cfg feature="profiling"`, which pulls in pyroscope-rs and compiles the
# agent init block in `main.rs`. Packaged separately as the `konfig-profiling`
# image; the default `konfig` image stays slim.
rust_binary(
    name = "konfig_bin_profiling",
    srcs = ["main.rs"],
    crate_features = ["profiling"],
    stamp = 1,
    tags = ["konfig", "rust", "profiling"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig",
        "@konfig_crates//:axum",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:kube",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:pyroscope",
        "@konfig_crates//:pyroscope_pprofrs",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
)

rust_test(
    name = "test",
    size = "small",
    crate = ":konfig",
    tags = ["konfig", "rust", "unit"],
)

# Rustdoc — `bazel build //rust/konfig:doc` to produce HTML docs.
rust_doc(
    name = "doc",
    crate = ":konfig",
    tags = ["konfig", "rust"],
)

# Doc tests — runs any ``` examples embedded in /// rustdoc comments.
rust_doc_test(
    name = "doc_test",
    crate = ":konfig",
    tags = ["konfig", "rust", "unit"],
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    tags = ["konfig", "rust", "unit"],
    targets = [":konfig"],
)

rust_clippy(
    name = "clippy_test",
    testonly = True,
    tags = ["konfig", "rust", "unit"],
    deps = [":konfig"],
)
